src/objects/WaiveUnmetObligationOption__mdt.object
<CustomObject>
    <fields>
        <fullName>IsDefault__c</fullName>
        <label>IsDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <label>LanguageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>waiveUnmetObligation__c</fullName>
        <label>waiveUnmetObligation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Waive Unmet Obligation Option</label>
    <pluralLabel>Waive Unmet Obligation Options</pluralLabel>
</CustomObject>